# esercitazione_1

Exercise0/: CMakeLists.txt  README.md  main.cpp
Exercise0/Debug/: CMakeCache.txt  Makefile  VoidExample  cmake_install.cmake
Exercise1/: CMakeLists.txt  README.md  data.txt
